ros2_ws/log/build_2025-06-19_09-36-03/path_executor/stdout_stderr.log
running egg_info
writing ../../build/path_executor/path_executor.egg-info/PKG-INFO
writing dependency_links to ../../build/path_executor/path_executor.egg-info/dependency_links.txt
writing entry points to ../../build/path_executor/path_executor.egg-info/entry_points.txt
writing requirements to ../../build/path_executor/path_executor.egg-info/requires.txt
writing top-level names to ../../build/path_executor/path_executor.egg-info/top_level.txt
reading manifest file '../../build/path_executor/path_executor.egg-info/SOURCES.txt'
writing manifest file '../../build/path_executor/path_executor.egg-info/SOURCES.txt'
running build
running build_py
copying path_executor/path_executor_node.py -> /home/tedee/swarm/ros2_ws/build/path_executor/build/lib/path_executor
running install
running install_lib
copying /home/tedee/swarm/ros2_ws/build/path_executor/build/lib/path_executor/path_executor_node.py -> /home/tedee/swarm/ros2_ws/install/path_executor/lib/python3.10/site-packages/path_executor
byte-compiling /home/tedee/swarm/ros2_ws/install/path_executor/lib/python3.10/site-packages/path_executor/path_executor_node.py to path_executor_node.cpython-310.pyc
running install_data
  File "/home/tedee/swarm/ros2_ws/install/path_executor/lib/python3.10/site-packages/path_executor/path_executor_node.py", line 189
    baiklah tolong bantu tuliskan langsung versi modifikasi dari PathExecutorNode sesuai konsep ini secara penuh
            ^^^^^^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/tedee/swarm/ros2_ws/install/path_executor/lib/python3.10/site-packages/path_executor-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/path_executor/path_executor.egg-info to /home/tedee/swarm/ros2_ws/install/path_executor/lib/python3.10/site-packages/path_executor-0.0.0-py3.10.egg-info
running install_scripts
Installing path_executor_node script to /home/tedee/swarm/ros2_ws/install/path_executor/lib/path_executor
writing list of installed files to '/home/tedee/swarm/ros2_ws/build/path_executor/install.log'
